--- a/k8s-install-playbook/roles/install_k8s/tasks/install.yml
+++ b/k8s-install-playbook/roles/install_k8s/tasks/install.yml
@@ -5,7 +5,7 @@
     mode: 0755
 
 - name: Install Docker
-  shell: bash /tmp/installer.sh
+  shell: /tmp/installer.sh
 
 - name: Add Apt signing key
   apt_key:
